<resources>
    <string name="app_name">StManage</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="register">Let\'s register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="stmanage">StManage</string>
    <string name="register_">Register</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="login">Let\'s login</string>
    <string name="_login">Login</string>
    <string name="last_name">Last name</string>
    <string name="user">First Name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="start">Start</string>
    <string name="introduction_text">Manage your school details\n Set notification so that you are notified of updates\n of your details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="update_details">Update Details</string>
    <string name="manage_preference">Manage Preference</string>
    <string name="light_mode">Dark Mode</string>
    <string name="edit_details">Edit details</string>
    <string name="engineering">Engineering</string>
    <string name="course">Course:</string>
    <string name="course_name">Bachelors in computer science</string>
    <string name="school">School</string>
    <string name="department_name">Engineering And Technology</string>
    <string name="department">Department:</string>
    <string name="male">Male</string>
    <string name="gender_name">Gender:</string>
    <string name="email">john1234@gmail.com</string>
    <string name="email_name">Email:</string>
    <string name="last_name_text">Hevertz</string>
    <string name="last_name2">Last Name:</string>
    <string name="first_name">John</string>
    <string name="first_name_text">First Name:</string>


</resources>