<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    style="@style/SCREEN_BACKGROUND"
    android:orientation="vertical"
    tools:context=".presentation.fragments.DetailsScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TEXTS"
        android:text="@string/manage_preference"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TEXTS"
            android:text="@string/light_mode"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <Switch
            android:id="@+id/swMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_account_circle_24" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="160dp"
            android:src="@drawable/baseline_edit_24" />
        />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/first_name_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TEXTS"
            android:padding="5dp"
            android:text="@string/first_name"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/last_name2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/last_name_text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/email_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/email"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/gender_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/male"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXTS"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            android:text="@string/department"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDepartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/department_name"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXTS"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            android:text="@string/course"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/course_name"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXTS"
            android:fontFamily="@font/oswald_regular"
            android:padding="5dp"
            android:text="@string/school"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSchoolName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            style="@style/TEXTS"
            android:text="@string/engineering"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditDetails"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_details"
        style="@style/BUTTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

</LinearLayout>